Use ipfilter instead of pf and let ezjail automatically create the ip aliases for the jails on lo1.

--- a/deployment/vm-master/rc.conf
+++ b/deployment/vm-master/rc.conf
@@ -6,8 +6,15 @@ sendmail_enable="NONE"
 sshd_enable="YES"
 syslogd_flags="-ss"
 zfs_enable="YES"
-pf_enable="YES"
+
+gateway_enable="YES"
+ipfilter_enable="YES"
+ipfilter_rules="/etc/ipf.rules"
+ipmon_enable="YES"
+ipmon_flags="-Ds"
+ipnat_enable="YES"
+ipnat_rules="/etc/ipnat.rules"
 
 ifconfig_em0="dhcp"
 cloned_interfaces="lo1"
-ifconfig_lo1_alias0="inet 10.0.0.1-25/32"
+jail_interface="lo1"
