Modern ssh doesn't need netcat for the proxycommand.

--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -13,7 +13,8 @@ password-fallback = true
 flavour = base
 user = root
 #proxycommand = nohup ./bin/assh vm-master nc -w 300 {ip} 22
-proxycommand = nohup ssh root@{instances[vm-master].host} -p {instances[vm-master].port} -o UserKnownHostsFile={known_hosts} nc -w 300 {ip} 22
+#proxycommand = nohup ssh root@{instances[vm-master].host} -p {instances[vm-master].port} -o UserKnownHostsFile={known_hosts} nc -w 300 {ip} 22
+proxycommand = nohup ssh root@{instances[vm-master].host} -p {instances[vm-master].port} -o UserKnownHostsFile={known_hosts} -W {ip}:22
 
 [ez-instance:test]
 <= macro:ez-base
