Give jails a few more permissons and specify shutdown script.
This makes ping and postgresql work in jails. Ideally mr.awsome.ezjail will support setting these per jail instead of setting them here globally.

--- a/deployment/vm-master/rc.conf
+++ b/deployment/vm-master/rc.conf
@@ -18,3 +18,5 @@ ipnat_rules="/etc/ipnat.rules"
 ifconfig_em0="dhcp"
 cloned_interfaces="lo1"
 jail_interface="lo1"
+jail_parameters="allow.raw_sockets=1 allow.sysvipc=1"
+jail_exec_stop="/bin/sh /etc/rc.shutdown"
