--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -15,6 +15,7 @@ user = root
 #proxycommand = nohup ./bin/assh vm-master nc -w 300 {ip} 22
 #proxycommand = nohup ssh root@{instances[vm-master].host} -p {instances[vm-master].port} -o UserKnownHostsFile={known_hosts} nc -w 300 {ip} 22
 proxycommand = nohup ssh root@{instances[vm-master].host} -p {instances[vm-master].port} -o UserKnownHostsFile={known_hosts} -W {ip}:22
+ansible_python_interpreter = /usr/local/bin/python2.7
 
 [ez-instance:test]
 <= macro:ez-base
