--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ extensions = mr.developer
 show-picked-versions = true
 auto-checkout =
     mr.awsome
+    mr.awsome.ansible
     mr.awsome.ezjail
     zfsinstall
 parts =
@@ -13,16 +14,19 @@ parts =
 recipe = zc.recipe.egg
 eggs =
     mr.awsome
+    mr.awsome.ansible
     mr.awsome.ezjail
 
 
 [sources]
 mr.awsome = git https://github.com/fschulze/mr.awsome
+mr.awsome.ansible = git https://github.com/fschulze/mr.awsome.ansible
 mr.awsome.ezjail = git https://github.com/fschulze/mr.awsome.ezjail
 zfsinstall = git https://github.com/fschulze/zfsinstall.git path=${buildout:directory}/deployment egg=false
 
 
 [versions]
+# mr.awsome
 Fabric = 1.8.0
 boto = 2.21.0
 mr.awsome = 0.13
@@ -30,3 +34,10 @@ paramiko = 1.12.0
 pycrypto = 2.6.1
 ecdsa = 0.10
 lazy = 1.1
+
+# ansible
+Jinja2 = 2.7.1
+MarkupSafe = 0.18
+PyYAML = 3.10
+ansible = 1.4.4
+httplib2 = 0.8
