Heavily refactored fabfile to be more generic and allow geli volumes.

--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -1,6 +1,11 @@
 [ez-master:vm-master]
 #debug-commands = true
 fabfile = ../deployment/vm-master/fabfile.py
+bootstrap-system-pool-size = 4G
+# bootstrap-swap-size = 1G
+bootstrap-zfsinstall = ../zfsinstall/zfsinstall
+# bootstrap-system-devices = ada0
+bootstrap-geli = yes
 host = 127.0.0.1
 port = 47022
 #host = 192.168.1.134
