Refactored some more. Better checks and more docs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.installed.cfg
 /.mr.developer.cfg
 /bin/
+/deployment/roles/common/files/identity.pub
 /deployment/zfsinstall/
 /develop-eggs/
 /downloads/
