Moved almost all vm-master setup into ansible.

--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -1,3 +1,6 @@
+[ansible]
+playbooks-directory = ../deployment
+
 [ez-master:vm-master]
 #debug-commands = true
 fabfile = ../deployment/vm-master/fabfile.py
@@ -19,12 +22,32 @@ flavour = base
 user = root
 #proxycommand = nohup ./bin/assh vm-master nc -w 300 {ip} 22
 proxycommand = ./bin/assh vm-master -W {ip}:22
-ansible_python_interpreter = /usr/local/bin/python2.7
+
+[ez-zfs:data]
+path = tank/data
+create = true
+set-mountpoint = /data
+
+[ez-zfs:shared]
+path = {zfs[data][path]}/shared
+create = true
+set-exec = off
+set-setuid = off
+
+[ez-zfs:jails]
+path = {zfs[data][path]}/jails
+create = true
 
 [ez-instance:test]
 <= macro:ez-base
 ip = 10.0.0.1
+mounts =
+    src={zfs[shared]}/cache/pkg/All dst=/var/cache/pkg/All create=true
+    src={zfs[shared]}/buildout/downloads dst=/mnt/data/buildout/downloads create=true
+    src={zfs[jails]}/{name}/buildout/eggs dst=/mnt/data/buildout/eggs create=true
 
 [ez-instance:test2]
 <= macro:ez-base
 ip = 10.0.0.2
+mounts =
+    src={zfs:shared}/cache/pkg/All dst=/var/cache/pkg/All create=true
