--- a/deployment/roles/jails_host/templates/ezjail.conf
+++ b/deployment/roles/jails_host/templates/ezjail.conf
@@ -8,7 +8,7 @@
 #
 # Note: If you have spread your jails to multiple locations, use softlinks
 # to collect them in this directory
-ezjail_jaildir=/var/jails
+ezjail_jaildir={{ jails_dir }}
 
 # Location of the tiny skeleton jail template
 # ezjail_jailtemplate=${ezjail_jaildir}/newjail
@@ -56,7 +56,7 @@ ezjail_use_zfs="YES"
 
 # The name of the ZFS ezjail should create jails on, it will be mounted at the ezjail_jaildir
 
-ezjail_jailzfs="tank/jails"
+ezjail_jailzfs="{{ jails_zfs_root }}"
 # ADVANCED, be very careful!
 # ezjail_zfs_properties="-o compression=lzjb -o atime=off"
 # ezjail_zfs_jail_properties="-o dedup=on"
