--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -50,4 +50,4 @@ mounts =
 <= macro:ez-base
 ip = 10.0.0.2
 mounts =
-    src={zfs:shared}/cache/pkg/All dst=/var/cache/pkg/All create=true
+    src={zfs[shared]}/cache/pkg/All dst=/var/cache/pkg/All create=true
