--- a/deployment/roles/jails_host/tasks/main.yml
+++ b/deployment/roles/jails_host/tasks/main.yml
@@ -67,3 +67,66 @@
 - name: Setup ezjail.conf
   template: src=ezjail.conf dest=/usr/local/etc/ezjail.conf
   notify: restart ezjail
+
+- name: Setup data zpool
+  zpool:
+    name="{{ awsome_bootstrap_data_pool_name | default('tank') }}"
+    geli="{{ awsome_bootstrap_geli|default('no')|bool }}"
+    devices="{{ awsome_bootstrap_data_pool_devices|default() }}"
+    raid_mode="{{ awsome_bootstrap_raid_mode|default() }}"
+  register: data_pool_result
+
+- name: Setup rc.conf lines for data zpool
+  lineinfile: dest=/etc/rc.conf regexp={{ item.regexp }} line={{ item.line }}
+  with_items: data_pool_result.rc_lines
+
+- name: Set data zpool options
+  zfs:
+    name="{{ awsome_bootstrap_data_pool_name | default('tank') }}"
+    state=present
+    atime=off
+    checksum=fletcher4
+
+- name: Jails ZFS file system
+  zfs:
+    name="{{ awsome_bootstrap_data_pool_name | default('tank') }}/jails"
+    state=present
+    mountpoint=/usr/jails
+
+- name: Initialize ezjail (may take a while)
+  command: "ezjail-admin install -h {{ awsome_ezjail_install_host|default('ftp.freebsd.org') }} -r {{ awsome_ezjail_install_release|default(ansible_distribution_release) }} creates=/usr/jails/basejail"
+
+- name: Download pkg.txz
+  get_url: dest=/var/cache/pkg/All/pkg.txz url={{ pkg_txz_url }}
+
+- name: Directory for jail flavour "base"
+  file: dest=/usr/jails/flavours/base state=directory owner=root group=wheel
+
+- name: Pkg in base flavour
+  command: "tar -x -C /usr/jails/flavours/base --chroot --exclude '+*' -f /var/cache/pkg/All/pkg.txz creates=/usr/jails/flavours/base"
+
+- name: The .ssh directory for root in base flavour
+  file: dest=/usr/jails/flavours/base/root/.ssh state=directory mode=0600 owner=root group=wheel
+- name: The etc directory in base flavour
+  file: dest=/usr/jails/flavours/base/etc state=directory owner=root group=wheel
+- name: The etc/ssh directory in base flavour
+  file: dest=/usr/jails/flavours/base/etc/ssh state=directory owner=root group=wheel
+
+- copy: src=./roles/common/files/make.conf dest=/usr/jails/flavours/base/etc/make.conf owner=root group=wheel
+- file: dest=/usr/jails/flavours/base/usr/local/etc/pkg/repos state=directory owner=root group=wheel
+- copy: src=./roles/common/files/pkg.conf dest=/usr/jails/flavours/base/usr/local/etc/pkg.conf owner=root group=wheel
+- copy: src=./roles/common/files/FreeBSD.conf dest=/usr/jails/flavours/base/usr/local/etc/pkg/repos/FreeBSD.conf owner=root group=wheel
+
+- name: rc.conf for base flavour
+  copy: src=base_flavour_rc.conf dest=/usr/jails/flavours/base/etc/rc.conf owner=root group=wheel
+- name: sshd_config for base flavour
+  copy: src=base_flavour_sshd_config dest=/usr/jails/flavours/base/etc/ssh/sshd_config owner=root group=wheel
+- name: motd for base flavour
+  copy: src=base_flavour_motd dest=/usr/jails/flavours/base/etc/motd owner=root group=wheel
+- name: copy some settings from host to base flavour
+  shell: cmp -s {{ item.src }} {{ item.dest }} || cp -v {{ item.src }} {{ item.dest }}
+  register: _cp_settings_result
+  changed_when: _cp_settings_result.stdout != ''
+  with_items:
+    - { src: "/etc/resolv.conf", dest: "/usr/jails/flavours/base/etc/resolv.conf" }
+    - { src: "/root/.ssh/authorized_keys", dest: "/usr/jails/flavours/base/root/.ssh/authorized_keys" }
