--- a/deployment/vm-master/rc.conf
+++ b/deployment/vm-master/rc.conf
@@ -1,7 +1,7 @@
 hostname="freebsd-test-dummy"
 
 ntpd_enable="YES"
-sendmail_enable="NONE"
+sendmail_enable="YES"
 sshd_enable="YES"
 syslogd_flags="-ss"
 zfs_enable="YES"
