--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,7 +18,7 @@ eggs =
 
 
 [sources]
-mr.awsome = git https://github.com/fschulze/mr.awsome
-mr.awsome.ansible = git https://github.com/fschulze/mr.awsome.ansible
-mr.awsome.ezjail = git https://github.com/fschulze/mr.awsome.ezjail
-zfsinstall = git https://github.com/fschulze/zfsinstall.git path=${buildout:directory}/deployment egg=false
+mr.awsome = git git@github.com:fschulze/mr.awsome.git
+mr.awsome.ansible = git git@github.com:fschulze/mr.awsome.ansible.git
+mr.awsome.ezjail = git git@github.com:fschulze/mr.awsome.ezjail.git
+zfsinstall = git git@github.com:fschulze/zfsinstall.git path=${buildout:directory}/deployment egg=false
