--- a/deployment/roles/zfs_auto_snapshot/tasks/main.yml
+++ b/deployment/roles/zfs_auto_snapshot/tasks/main.yml
@@ -10,3 +10,9 @@
   cron: name="weekly zfs-auto-snapshot"  special_time=weekly  job="PATH=$PATH:/sbin:/usr/local/bin /usr/local/sbin/zfs-auto-snapshot -u weekly   4"
 - name: Setup monthly zfs-auto-snapshot
   cron: name="monthly zfs-auto-snapshot" special_time=monthly job="PATH=$PATH:/sbin:/usr/local/bin /usr/local/sbin/zfs-auto-snapshot -u monthly 12"
+
+- name: Ensure python package without version number is installed
+  pkgng: name=python state=present
+
+- name: Install snapshot backup script
+  copy: src=zfs_snap_backup/zfs_snap_backup dest=/usr/local/bin/zfs_snap_backup mode=0755
