Use {path} in proxycommand.

--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -21,7 +21,7 @@ password-fallback = true
 flavour = base
 user = root
 #proxycommand = nohup ./bin/assh vm-master nc -w 300 {ip} 22
-proxycommand = ./bin/assh vm-master -W {ip}:22
+proxycommand = {path}/../bin/assh vm-master -W {ip}:22
 startup_script = ../deployment/vm-master/startup-ansible-jail
 
 [ez-zfs:data]
