--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -22,6 +22,7 @@ flavour = base
 user = root
 #proxycommand = nohup ./bin/assh vm-master nc -w 300 {ip} 22
 proxycommand = {path}/../bin/assh vm-master -W {ip}:22
+proxyhost = vm-master
 startup_script = ../deployment/vm-master/startup-ansible-jail
 
 [ez-zfs:data]
