Explicitly set configpath for aws, so assh works as proxycommand regardless of current directory.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,6 +15,7 @@ eggs =
     mr.awsome
     mr.awsome.ansible
     mr.awsome.ezjail
+arguments = configpath="${buildout:directory}/etc"
 
 
 [sources]
