--- a/etc/aws.conf
+++ b/etc/aws.conf
@@ -20,8 +20,7 @@ password-fallback = true
 [macro:ez-base]
 flavour = base
 user = root
-#proxycommand = nohup ./bin/assh vm-master nc -w 300 {ip} 22
-proxycommand = {path}/../bin/assh vm-master -W {ip}:22
+proxycommand = nohup {path}/../bin/assh vm-master -W {ip}:22
 proxyhost = vm-master
 startup_script = ../deployment/vm-master/startup-ansible-jail
 
