Use new ezjail-provisioning repository.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ auto-checkout =
     mr.awsome
     mr.awsome.ansible
     mr.awsome.ezjail
+    provisioning
     zfsinstall
 parts =
     mr.awsome
@@ -22,4 +23,5 @@ arguments = configpath="${buildout:directory}/etc"
 mr.awsome = git git@github.com:fschulze/mr.awsome.git
 mr.awsome.ansible = git git@github.com:fschulze/mr.awsome.ansible.git
 mr.awsome.ezjail = git git@github.com:fschulze/mr.awsome.ezjail.git
+provisioning = git git@github.com:fschulze/ezjail-provisioning.git path=${buildout:directory} egg=false
 zfsinstall = git git@github.com:fschulze/zfsinstall.git path=${buildout:directory}/deployment egg=false
