Disable sendmail by default.

--- a/deployment/vm-master/rc.conf
+++ b/deployment/vm-master/rc.conf
@@ -1,6 +1,6 @@
 hostname="freebsd-test-dummy"
 
-sendmail_enable="YES"
+sendmail_enable="NO"
 sshd_enable="YES"
 syslogd_flags="-ss"
 zfs_enable="YES"
