--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,27 +1,22 @@
 [buildout]
 extensions = mr.developer
 auto-checkout =
+	bsdploy
     mr.awsome
     mr.awsome.ansible
     mr.awsome.ezjail
-    provisioning
-    zfsinstall
 parts =
-    mr.awsome
+    bsdploy
 
 
-[mr.awsome]
+[bsdploy]
 recipe = zc.recipe.egg
-eggs =
-    mr.awsome
-    mr.awsome.ansible
-    mr.awsome.ezjail
+eggs = bsdploy
 arguments = configpath="${buildout:directory}/etc"
 
 
 [sources]
-mr.awsome = git git@github.com:fschulze/mr.awsome.git
-mr.awsome.ansible = git git@github.com:fschulze/mr.awsome.ansible.git
-mr.awsome.ezjail = git git@github.com:fschulze/mr.awsome.ezjail.git
-provisioning = git git@github.com:fschulze/ezjail-provisioning.git path=${buildout:directory} egg=false
-zfsinstall = git git@github.com:fschulze/zfsinstall.git path=${buildout:directory}/deployment egg=false
+bsdploy = git https://github.com/tomster/bsdploy
+mr.awsome = git https://github.com/fschulze/mr.awsome
+mr.awsome.ansible = git https://github.com/fschulze/mr.awsome.ansible
+mr.awsome.ezjail = git https://github.com/fschulze/mr.awsome.ezjail
