--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -5,6 +5,7 @@ playbooks-directory = ../deployment
 #debug-commands = true
 fabfile = ../deployment/vm-master/fabfile.py
 bootstrap-system-pool-size = 4G
+# bootstrap-reboot = false
 # bootstrap-swap-size = 1G
 # bootstrap-system-devices = ada0
 bootstrap-geli = yes
