move the fabfile up

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -3,7 +3,7 @@ playbooks-directory = ../deployment
 
 [ez-master:vm-master]
 #debug-commands = true
-fabfile = ../deployment/vm-master/fabfile.py
+fabfile = ../deployment/jailhost.py
 bootstrap-system-pool-size = 4G
 # bootstrap-reboot = false
 # bootstrap-swap-size = 1G
