--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -20,7 +20,7 @@ password-fallback = true
 [macro:ez-base]
 flavour = base
 user = root
-proxycommand = nohup {path}/../bin/assh vm-master -W {ip}:22
+proxycommand = nohup {path}/../bin/pssh vm-master -W {ip}:22
 proxyhost = vm-master
 startup_script = ../deployment/vm-master/startup-ansible-jail
 
