clean up the sample comfig

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -22,27 +22,12 @@ flavour = base
 user = root
 proxycommand = nohup {path}/../bin/pssh vm-master -W {ip}:22
 proxyhost = vm-master
-startup_script = ../deployment/vm-master/startup-ansible-jail
-
-[ez-zfs:data]
-path = tank/data
-
-[ez-zfs:shared]
-path = {zfs[data][path]}/shared
-
-[ez-zfs:jails]
-path = {zfs[data][path]}/jails
+hooks = bsdploy.AWSomeHooks
 
 [ez-instance:test]
 <= macro:ez-base
 ip = 10.0.0.1
-mounts =
-    src={zfs[shared]}/cache/pkg/All dst=/var/cache/pkg/All create=true
-    src={zfs[shared]}/buildout/downloads dst=/mnt/data/buildout/downloads create=true
-    src={zfs[jails]}/{name}/buildout/eggs dst=/mnt/data/buildout/eggs create=true
 
 [ez-instance:test2]
 <= macro:ez-base
 ip = 10.0.0.2
-mounts =
-    src={zfs[shared]}/cache/pkg/All dst=/var/cache/pkg/All create=true
