install a webserver with a sample page as test jail

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -2,20 +2,20 @@
 playbooks-directory = ../deployment
 
 [ez-master:vm-master]
-#debug-commands = true
 fabfile = ../deployment/jailhost.py
 bootstrap-system-pool-size = 4G
 # bootstrap-reboot = false
 # bootstrap-swap-size = 1G
 # bootstrap-system-devices = ada0
 bootstrap-geli = yes
+
+# the host and port match the settings from the port forward settings of the virtualbox container
 host = 127.0.0.1
 port = 47022
-#host = 192.168.1.134
+
 user = root
+# the fingerprint matches the host key in deployment/bootstrap-files/ssh_host_rsa_key.pub:
 fingerprint = bf:dd:8e:9d:48:8c:7a:4e:49:0c:e4:58:a0:9c:7c:18
-#fingerprint = none
-password-fallback = true
 
 [macro:ez-base]
 flavour = base
@@ -24,9 +24,10 @@ proxycommand = nohup {path}/../bin/pssh vm-master -W {ip}:22
 proxyhost = vm-master
 hooks = bsdploy.AWSomeHooks
 
-[ez-instance:test]
+[ez-instance:webserver]
 <= macro:ez-base
 ip = 10.0.0.2
+ansible-greeting = ansible user
 
 [ez-instance:test2]
 <= macro:ez-base
