minimal role for setting up a tahoe-lafs node

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -29,6 +29,6 @@ hooks = bsdploy.AWSomeHooks
 ip = 10.0.0.2
 ansible-greeting = ansible user
 
-[ez-instance:test2]
+[ez-instance:tahoe]
 <= macro:ez-base
 ip = 10.0.0.3
