--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -32,3 +32,11 @@ ansible-greeting = ansible user
 [ez-instance:tahoe]
 <= macro:ez-base
 ip = 10.0.0.3
+
+[ez-instance:btsync]
+<= macro:ez-base
+ip = 10.0.0.4
+ansible-btsync_device_name = vbox-btsync
+ansible-btsync_listening_port: 6667
+ansible-btsync_webui_port: 6668
+ansible-btsync_webui_password: blubber
