document the btsync jail

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -39,4 +39,4 @@ ip = 10.0.0.4
 ansible-btsync_device_name = vbox-btsync
 ansible-btsync_listening_port: 6667
 ansible-btsync_webui_port: 6668
-ansible-btsync_webui_password: blubber
+ansible-btsync_webui_password: admin
