switch back to original repo after merge of bugfix

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,6 @@ arguments = configpath="${buildout:directory}/etc"
 [sources]
 bsdploy = git https://github.com/tomster/bsdploy
 mr.awsome = git https://github.com/fschulze/mr.awsome
-#mr.awsome.fabric = git https://github.com/fschulze/mr.awsome.fabric
-mr.awsome.fabric = git https://github.com/tomster/mr.awsome.fabric branch=env-server
+mr.awsome.fabric = git https://github.com/fschulze/mr.awsome.fabric
 mr.awsome.ansible = git https://github.com/fschulze/mr.awsome.ansible
 mr.awsome.ezjail = git https://github.com/fschulze/mr.awsome.ezjail
