--- a/deployment/bootstrap-files/rc.conf
+++ b/deployment/bootstrap-files/rc.conf
@@ -1,6 +1,5 @@
-hostname="briefkasten-jailhost"
+hostname="ezjail-test-vm"
 
-ntpd_enable="YES"
 sendmail_enable="YES"
 sshd_enable="YES"
 syslogd_flags="-ss"
