Allow completely offline bootstrap.

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -5,9 +5,12 @@ playbooks-directory = ../deployment
 fabfile = ../deployment/jailhost.py
 bootstrap-system-pool-size = 4G
 # bootstrap-reboot = false
+bootstrap-packages =
+    ezjail sudo screen bash rsync zfstools python
 # bootstrap-swap-size = 1G
 # bootstrap-system-devices = ada0
 bootstrap-geli = yes
+ezjail-install-host = file:///var/cache/ezjail
 
 # the host and port match the settings from the port forward settings of the virtualbox container
 host = 127.0.0.1
