--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,7 +17,7 @@ arguments = configpath="${buildout:directory}/etc"
 
 
 [sources]
-bsdploy = git git@github.com:tomster/bsdploy
+bsdploy = git https://github.com/tomster/bsdploy
 mr.awsome = git https://github.com/fschulze/mr.awsome
 mr.awsome.fabric = git https://github.com/fschulze/mr.awsome.fabric
 mr.awsome.ansible = git https://github.com/fschulze/mr.awsome.ansible
