--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ MarkupSafe==0.23
 PyYAML==3.11
 Fabric==1.8.2
 ansible==1.5.5
+mr.awsome>=1.0rc3 
 mr.awsome.ansible>=1.0b2
 mr.awsome.ezjail>=1.0b2
 mr.awsome.ec2>=1.0b2
