adjust to 48f7526e1f3dd0de4c5a173a779e21145a5b085b in bsdploy

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -22,7 +22,7 @@ fingerprint = bf:dd:8e:9d:48:8c:7a:4e:49:0c:e4:58:a0:9c:7c:18
 [macro:ez-base]
 flavour = base
 user = root
-proxycommand = nohup {path}/../bin/pssh vm-master -W {ip}:22
+proxycommand = nohup {path}/../bin/ploy-ssh vm-master -W {ip}:22
 proxyhost = vm-master
 
 [ez-instance:webserver]
