Use new ``roles`` option of mr.awsome.ansible.

--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -16,6 +16,11 @@ port = 47022
 user = root
 # the fingerprint matches the host key in deployment/bootstrap-files/ssh_host_rsa_key.pub:
 fingerprint = bf:dd:8e:9d:48:8c:7a:4e:49:0c:e4:58:a0:9c:7c:18
+roles =
+    dhcp_host
+    jails_host
+    data_zfs_layout
+    zfs_auto_snapshot
 
 [macro:ez-base]
 flavour = base
