Use mr.awsome.virtualbox and update readme.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,18 +1,21 @@
 [buildout]
 extensions = mr.developer
 auto-checkout =
-	bsdploy
+    bsdploy
     mr.awsome
     mr.awsome.ansible
     mr.awsome.ezjail
     mr.awsome.fabric
+    mr.awsome.virtualbox
 parts =
     bsdploy
 
 
 [bsdploy]
 recipe = zc.recipe.egg
-eggs = bsdploy
+eggs =
+    bsdploy
+    mr.awsome.virtualbox
 arguments = configpath="${buildout:directory}/etc"
 
 
@@ -22,3 +25,4 @@ mr.awsome = git https://github.com/fschulze/mr.awsome
 mr.awsome.fabric = git https://github.com/fschulze/mr.awsome.fabric
 mr.awsome.ansible = git https://github.com/fschulze/mr.awsome.ansible
 mr.awsome.ezjail = git https://github.com/fschulze/mr.awsome.ezjail
+mr.awsome.virtualbox = git https://github.com/fschulze/mr.awsome.virtualbox
