--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -1,6 +1,25 @@
 [ansible]
 playbooks-directory = ../deployment
 
+[vb-disk:boot]
+size = 102400
+
+[vb-instance:ezjail-test-vm]
+vm-ostype = FreeBSD_64
+vm-memory = 512
+vm-accelerate3d = off
+vm-acpi = on
+vm-rtcuseutc = on
+vm-boot1 = disk
+vm-boot2 = dvd
+vm-nic1 = nat
+vm-natpf1 = ssh,tcp,,47022,,22
+vm-nic2 = hostonly
+vm-hostonlyadapter2 = vboxnet0
+storage =
+    --type dvddrive --medium ../downloads/mfsbsd-se-9.2-RELEASE-amd64.iso
+    --medium vb-disk:boot
+
 [ez-master:vm-master]
 bootstrap-system-pool-size = 4G
 # bootstrap-reboot = false
@@ -8,10 +27,7 @@ bootstrap-system-pool-size = 4G
 # bootstrap-system-devices = ada0
 bootstrap-geli = yes
 
-# the host and port match the settings from the port forward settings of the virtualbox container
-host = 127.0.0.1
-port = 47022
-
+instance = ezjail-test-vm
 user = root
 # the fingerprint matches the host key in deployment/bootstrap-files/ssh_host_rsa_key.pub:
 fingerprint = bf:dd:8e:9d:48:8c:7a:4e:49:0c:e4:58:a0:9c:7c:18
