use static IP from the hostonly DHCP server's network

--- a/deployment/bootstrap-files/rc.conf
+++ b/deployment/bootstrap-files/rc.conf
@@ -5,5 +5,5 @@ sshd_enable="YES"
 syslogd_flags="-ss"
 zfs_enable="YES"
 
-ifconfig_em0="dhcp"
+ifconfig_em0="inet 192.168.56.13 netmask 255.255.255.0"
 ifconfig_em1="dhcp"
