--- a/etc/ploy.conf
+++ b/etc/ploy.conf
@@ -47,7 +47,9 @@ proxyhost = vm-master
 [ez-instance:webserver]
 <= macro:ez-base
 ip = 10.0.0.2
+ansible-fqdn = webserver.192.168.56.13.xip.io
 ansible-greeting = ansible user
+roles = webserver
 
 [ez-instance:tahoe]
 <= macro:ez-base
